        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.9-42.0.10.EL (RHEL 4),
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.2-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : normal
Bugzilla   : 13497
Description: LASSERT_{REQ,REP}SWAB macros are buggy
Details    : If SWAB_PARANOIA is disabled, the LASSERT_REQSWAB and
             LASSERT_REPSWAB macros become no-ops, which is incorrect. Drop
              these macros and replace them with their difinitions instead.

Severity   : normal
Bugzilla   : 13521
Description: Update kernel patches for SLES10 2.6.16.53-0.8.
Details    : Update which_patch & target file for SLES10 latest kernel.

Bugzilla   : 12411
Description: Remove client patches from SLES 10 kernel.
Details    : This causes SLES 10 clients to behave as patchless clients
             even on a Lustre-patched (server) kernel.

Severity   : enhancement
Bugzilla   : 2262
Description: self-adjustable client's lru lists
Details    : use adaptive algorithm for managing client cached locks lru 
             lists according to current server load, other client's work
             pattern, memory activities, etc. Both, server and client 
             side namespaces provide number of proc tunables for controlling 
             things

Severity   : enhancement
Bugzilla   : 13641
Description: light-weight GSS support
Details    : Support krb5n and krb5a mode, which keep Kerberos 5 authentication
	     and reduce performance overhead.

Severity   : enhancement
Bugzilla   : 11832
Description: Linux keyring support
Details    : Support using service of Linux keyring for Lustre GSS internal
	     context refresh/cache mechanism.

Severity   : normal
Bugzilla   : 12186
Description: Fix errors in lfs documentation
Details    : Fixes man pages

Severity   : normal